Updated program name to teenslc and added teenslc logos

--- a/slides-en.html
+++ b/slides-en.html
@@ -22,7 +22,7 @@
 
   <main>
     <section class="slide welcome highlight">
-      <h1><img class="logo-stacked" src="framework/img/codemobilelogo.png" alt="Ladies Learning Code logo">Welcome!</h1>
+      <h1><img class="logo-stacked" src="framework/img/teenslc-logo-stacked-white.png" alt="Teens Learning Code logo">Welcome!</h1>
 
       <div class="instructions">
         <!-- ADD WIFI INFO HERE -->
@@ -47,6 +47,7 @@
     </section>
 
     <section class="slide intro">
+      <img class="logo" src="framework/img/teenslc-logo-white.png" alt="Teens Learning Code logo">
       <h1 class="heading-bg">
         <span>Generative Art<br>
         with JavaScript</span>
@@ -54,7 +55,7 @@
 
       <ul>
         <li><a href="http://twitter.com/learningcode">@learningcode</a></li>
-        <li><a href="https://twitter.com/search?q=%23kidslearningcode&src=typd">#codemobile</a></li>
+        <li><a href="https://twitter.com/search?q=%23kidslearningcode&src=typd">#teenslearningcode</a></li>
       </ul>
       <!--
       <div class="sponsor">
@@ -1026,7 +1027,7 @@
 
       <ul>
         <li><a href="http://twitter.com/learningcode">@learningcode</a></li>
-        <li><a href="https://twitter.com/search?q=%23kidslearningcode&src=typd">#kidslearningcode</a></li>
+        <li><a href="https://twitter.com/search?q=%23kidslearningcode&src=typd">#teenslearningcode</a></li>
       </ul>
 
       <p class="attribution">Slide presentation created by <a href="http://christinatruong.com">Christina Truong</a> based on <a href="https://github.com/LeaVerou/csss">Lea Verou's SlideShow</a> and <a href="http://lab.hakim.se/reveal-js/">reveal.js</a>.</p>
