--- a/slides-en.html
+++ b/slides-en.html
@@ -72,12 +72,19 @@
     <section class="slide title" data-markdown>
       <script type="text/template">
         #Introductions
+        <div style=" text-align: center; margin-top: 30vh;">
+          <img style="width: 25%;" src="framework/img/workshop/tiffanyhello.gif" alt="Waving GIF 1"/>
+          <img style="width: 25%;" src="framework/img/workshop/mannymua.gif" alt="Waving GIF 2"/>
+          <img style="width: 25%;" src="framework/img/workshop/hellohannahbrown.gif" alt="Waving GIF 3"/>
+      </div>
       </script>
     </section>
 
-    <section class="slide title" data-markdown>
+    <section class="slide" data-markdown>
       <script type="text/template">
-        #Getting Started with Zoom
+        # Getting started with Zoom
+
+        ![Zoom Life](framework/img/workshop/thatzoomlife.gif)
       </script>
     </section>
 
@@ -97,6 +104,7 @@
 
     <section class="slide" data-markdown>
       <script type="text/template">
+        ![Raising hands](framework/img/workshop/raisinghand.gif)
         # Zoom: Raising Your Hand
         ![To raise your virtual hand, start by clicking on the Participants button.](framework/img/workshop/zoom-participants.png)
        </script>
@@ -116,17 +124,25 @@
         <div class="table-of-contents"></div>
        </script>
     </section> -->
-
-    <section class="slide centered" data-markdown>
+    <section class="slide" data-markdown>
       <script type="text/template">
-       ![Coders Code Banner](framework/img/workshop/scroll.png)
-         ## 1. Be friendly and welcoming
-         ## 2. Be mindful of how much space you take up in conversations
-         ## 3. Be respectful of others by choosing words and actions with care
-         ## 4. Ask questions
-         ## 5. Take care of your body
-         ## 6. No photos or audio/video recordings
-      </script>
+          <div style="text-align: center;">
+          <img style="width: 45%;" src="framework/img/workshop/scroll.png" alt="Coders Code"/>
+          </div>
+          </div>
+          <div style="margin-left:20rem;">
+            <div style="text-align: left;">
+              <ul>
+                <li> Be friendly, respectful and welcoming </li>
+                <li> Be mindful of how much space you take up in conversations </li>
+                <li> Ask questions </li>
+                <li> Take care of your body </li>
+                <li> No photos or audio/video recordings </li>
+              </ul>
+            </div>
+          </div>
+          <h2 style="text-align: center;"><strong>What else do you need?</strong></h2>
+          </script>
     </section>
 
     <section class="slide title" data-markdown>
@@ -137,8 +153,14 @@
 
     <section class="slide title" data-markdown>
       <script type="text/template">
-        #Ice Breaker
-        ##Let's get to know each other!
+        # IceBreaker
+        ## Let's get to know eachother
+        <div style=" text-align: center; margin-top: 35vh;">
+          <img style="width: 10%;" src="framework/img/workshop/fistbump1.png" alt="Fist bump"/>
+          <img style="width: 10%;" src="framework/img/workshop/fistbump2.png" alt="Fist bump 2"/>
+          <img style="width: 10%;" src="framework/img/workshop/hand.png" alt="Hand"/>
+          <img style="width: 10%;" src="framework/img/workshop/wave.png" alt="Waving Hand"/>
+        </div>
       </script>
     </section>
 
@@ -407,6 +429,38 @@
     <section class="slide title" data-toc data-markdown>
       <script type="text/template">
         #LET'S GET CODING!
+      </script>
+    </section>
+
+    <section class="slide" data-markdown>
+      <script type="text/template">
+        # Todays Approach
+        <div style="display: grid; grid-template-columns: 0.5fr 3.5fr 0fr;">
+          <div style="display: table-cell; vertical-align: middle;">
+            <img style="width: 30vw;" src="framework/img/workshop/talking.png" alt="Talking"/>
+          </div>
+          <div style="text-align: left; display: table-cell; vertical-align: middle; padding: 2%;">
+            <h2> Let <strong style="color: #ff584e;"> Me </strong> introduce you to p5JS </h2>
+          </div>
+        </div>
+
+        <div style="display: grid; grid-template-columns: 0.5fr 3.5fr 0fr;">
+          <div style="display: table-cell; vertical-align: middle;">
+            <img style="width: 30vw;" src="framework/img/workshop/together.png" alt="Together"/>
+          </div>
+          <div style="display: table-cell; vertical-align: middle; padding: 2%;">
+            <h2> <strong style="color: #ff584e;">We</strong> will work through new concepts together on my screen! </h2>
+          </div>
+        </div>
+
+        <div style="display: grid; grid-template-columns: 0.5fr 3.5fr 0fr;">
+          <div style="display: table-cell; vertical-align: middle;">
+            <img style="width: 30vw;" src="framework/img/workshop/you.png" alt="you"/>
+          </div>
+          <div style="display: table-cell; vertical-align: middle; padding: 2%;">
+            <h2> <strong style="color: #ff584e;">You</strong> will then get a chance to apply the concept to your own project!</h2>
+          </div>
+        </div>
       </script>
     </section>
 
