Added circle of knowledge slides

--- a/slides-en.html
+++ b/slides-en.html
@@ -151,6 +151,20 @@
       </script>
     </section>
 
+    <section class="slide" data-markdown>
+      <script type="text/template">
+        <div style=" text-align: center; margin-top: -10%;">
+          <img style="transform:rotate(180deg); width: 25%;" src="framework/img/workshop/thinkinggirl.gif" alt="Thinking GIF 1"/>
+          <img style="transform:rotate(180deg); width: 25%;" src="framework/img/workshop/thinking.gif" alt="Thinking GIF 2"/>
+          <img style="transform:rotate(180deg); width: 25%;" src="framework/img/workshop/dogthinking.gif" alt="Thinking GIF 3"/>
+          <h1>Submitting circle of knowledge questions</h1>
+          <img style="width: 30%;" src="framework/img/workshop/girlthinking2.gif" alt="Thinking GIF 4"/>
+          <img style="width: 25%;" src="framework/img/workshop/girlthinking3.gif" alt="Thinking GIF 5"/>
+          <img style="width: 15%;" src="framework/img/workshop/boythinking2.gif" alt="Thinking GIF 6"/>
+        </div>
+      </script>
+    </section>
+
     <section class="slide title" data-markdown>
       <script type="text/template">
         # IceBreaker
@@ -1056,6 +1070,21 @@
 
         </script>
       </section>
+
+      <section class="slide" data-markdown>
+        <script type="text/template">
+          <div style=" text-align: center; margin-top: -10%;">
+            <img style="transform:rotate(180deg); width: 25%;" src="framework/img/workshop/thinkinggirl.gif" alt="Thinking GIF 1"/>
+            <img style="transform:rotate(180deg); width: 25%;" src="framework/img/workshop/thinking.gif" alt="Thinking GIF 2"/>
+            <img style="transform:rotate(180deg); width: 25%;" src="framework/img/workshop/dogthinking.gif" alt="Thinking GIF 3"/>
+            <h1>Circle of knowledge</h1>
+            <img style="width: 30%;" src="framework/img/workshop/girlthinking2.gif" alt="Thinking GIF 4"/>
+            <img style="width: 25%;" src="framework/img/workshop/girlthinking3.gif" alt="Thinking GIF 5"/>
+            <img style="width: 15%;" src="framework/img/workshop/boythinking2.gif" alt="Thinking GIF 6"/>
+          </div>
+        </script>
+      </section>
+
 
       <section class="slide" data-toc data-markdown>
         <script type="text/template">
