--- a/slides-en.html
+++ b/slides-en.html
@@ -25,17 +25,12 @@
       <h1><img class="logo-stacked" src="framework/img/teenslc-logo-stacked-white.png" alt="Teens Learning Code logo">Welcome!</h1>
 
       <div class="instructions">
-        <!-- ADD WIFI INFO HERE -->
-        <h2>Get <br>Connected</h2>
-        <p><strong>Wifi:</strong> Wifi Network</p>
-        <p><strong>Password:</strong> Wifi Password</p>
-        <hr>
         <h2>Create a<br>Project</h2>
         <p>Open <a href="https://editor.p5js.org">editor.p5js.org</a></p>
         <p>Optional: Click <strong>Sign Up</strong> to create an account</p>
         <hr>
         <h2>Get <br>Familiar</h2>
-        <p>Go to <a href="showcase.p5js.org">showcase.p5js.org</a></p>
+        <p>Go to <a href="https://showcase.p5js.org">showcase.p5js.org</a></p>
         <p>Check out some examples made with JavaScript and p5js</p>
       </div>
 
@@ -64,7 +59,7 @@
       -->
       <footer>
         <a class="left" rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/"><img alt="Creative Commons License" src="framework/img/cc-by-nc.png" /></a>
-        <p class="left">Content created by Kassandra Lenters &amp; Kat Barrett, revisions by Steve Blair for <a prefix="cc: http://creativecommons.org/ns#" href="http://canadalearningcode.ca" property="cc:attributionName" rel="cc:attributionURL">Canada Learning Code</a></p>
+        <p class="left">Content created by Kassandra Lenters &amp; Kat Barrett, revisions by Steve Blair &amp; Bilal Qadar for <a prefix="cc: http://creativecommons.org/ns#" href="http://canadalearningcode.ca" property="cc:attributionName" rel="cc:attributionURL">Canada Learning Code</a></p>
         <p class="right">Use the left <span class="arrow">&#8592;</span> and right <span class="arrow">&#8594;</span> arrow keys to navigate</p>
       </footer>
     </section>
@@ -117,13 +112,14 @@
        </script>
     </section>
 
-    <!-- <section class="slide" data-markdown>
+    <section class="slide" data-markdown>
       <script type="text/template">
-        # Table of Contents
+        # Agenda
 
         <div class="table-of-contents"></div>
        </script>
-    </section> -->
+    </section>
+
     <section class="slide" data-markdown>
       <script type="text/template">
           <div style="text-align: center;">
@@ -181,7 +177,7 @@
      <section class="slide title" data-markdown>
       <script type="text/template">
         # Today's Project
-        ## We're learning how to create<br> generative art with Processing
+        ## We're learning how to create<br> generative art with p5js
       </script>
     </section>
 
@@ -289,15 +285,15 @@
 
     <section class="slide title" data-toc data-markdown>
       <script type="text/template">
-        # What is Processing?
+        # What is p5js?
       </script>
     </section>
 
     <section class="slide two-col-list" data-markdown>
       <script type="text/template">
-      # Processing
-      * Why Processing?
-        * A coding language created for artists &amp; designers
+      # p5js
+      * Why p5js?
+        * A flavour of JavaScript created for artists &amp; designers
         * Open source and free to use
         * Creates pictures or animations
         * Used to visually represent data
@@ -310,21 +306,6 @@
           <div class="dropdown-content">
             <a href="http://giphy.com/gifs/processing-creative-coding-openprocessing-jk9L41aToGZQA">Sun gif</a>
           </div>
-
-      </script>
-    </section>
-
-    <section class="slide" data-markdown>
-      <script type="text/template">
-      # Processing Language Variations
-      
-      We'll be using a variation of Processing called **p5.js**
-
-      With Processing being open source software, the community has built a number of variations by combining the original verstion with other programming languages.
-
-      With p5.js we'll actually be learning to write our code in **Javascript**, a very popular language used on the web.
-
-      You can learn more about the original version of Processing and the other variations on <a href="https://processing.org/">processing.org</a>
 
       </script>
     </section>
@@ -778,8 +759,8 @@
         * <strong>If</strong> it is raining... then grab your umbrella.
         * <strong>If</strong> you are hungry... then have a snack.
 
-        <div><p style="color:#ef0919">Create your own!</p>
-        <p style="color:#ef0919">If *something happens*... *then do this* </p></div><!-- .element: class="delayed" -->
+        <div><p style="color:#ff584e">Create your own!</p>
+        <p style="color:#ff584e">If *something happens*... *then do this* </p></div><!-- .element: class="delayed" -->
 
       </script>
     </section>
@@ -1062,10 +1043,12 @@
         <script type="text/template">
           # Today I Learned...
 
-          <p><strong>I can</strong> create algorithms in JavaScript</p><!-- .element: class="delayed" -->
+          <p><strong>I can</strong> read &amp; write JavaScript code</p><!-- .element: class="delayed" -->
+          <p><strong>I can</strong> access reference documentation to help solve a problem</p><!-- .element: class="delayed" -->
           <p><strong>I can</strong> draw shapes using x,y coordinates</p><!-- .element: class="delayed" -->
-          <p><strong>I can</strong> use conditionals to make my project interactive</p><!-- .element: class="delayed" -->
-          <p><strong>I can</strong> use variables to track and change things in my project</p><!-- .element: class="delayed" -->
+          <p><strong>I can</strong> use conditionals to make decisions</p><!-- .element: class="delayed" -->
+          <p><strong>I can</strong> use variables to store data</p><!-- .element: class="delayed" -->
+          <p><strong>I can</strong> perform operations using various data types (strings, integers etc.)</p><!-- .element: class="delayed" -->
           <p><strong>I can</strong> use P5.js to KEEP CODING!</p><!-- .element: class="delayed" -->
 
         </script>
