--- a/slides-en.html
+++ b/slides-en.html
@@ -67,11 +67,11 @@
     <section class="slide title" data-markdown>
       <script type="text/template">
         #Introductions
-        <div style=" text-align: center; margin-top: 30vh;">
+        <!--<div style=" text-align: center; margin-top: 30vh;">
           <img style="width: 25%;" src="framework/img/workshop/tiffanyhello.gif" alt="Waving GIF 1"/>
           <img style="width: 25%;" src="framework/img/workshop/mannymua.gif" alt="Waving GIF 2"/>
           <img style="width: 25%;" src="framework/img/workshop/hellohannahbrown.gif" alt="Waving GIF 3"/>
-      </div>
+      </div>-->
       </script>
     </section>
 
@@ -132,7 +132,13 @@
       </script>
     </section>
 
-    <section class="slide" data-markdown>
+    <section class="slide title" data-markdown>
+      <script type="text/template">
+        #Submitting circle of knowledge questions
+      </script>
+    </section>
+
+    <!--<section class="slide" data-markdown>
       <script type="text/template">
         <div style=" text-align: center; margin-top: -10%;">
           <img style="transform:rotate(180deg); width: 25%;" src="framework/img/workshop/thinkinggirl.gif" alt="Thinking GIF 1"/>
@@ -144,7 +150,7 @@
           <img style="width: 15%;" src="framework/img/workshop/boythinking2.gif" alt="Thinking GIF 6"/>
         </div>
       </script>
-    </section>
+    </section>-->
 
     <section class="slide title" data-markdown>
       <script type="text/template">
@@ -1039,7 +1045,13 @@
         </script>
       </section>
 
-      <section class="slide" data-markdown>
+      <section class="slide title" data-markdown>
+        <script type="text/template">
+          #Circle of knowledge
+        </script>
+      </section>
+
+      <!--<section class="slide" data-markdown>
         <script type="text/template">
           <div style=" text-align: center; margin-top: -10%;">
             <img style="transform:rotate(180deg); width: 25%;" src="framework/img/workshop/thinkinggirl.gif" alt="Thinking GIF 1"/>
@@ -1051,7 +1063,7 @@
             <img style="width: 15%;" src="framework/img/workshop/boythinking2.gif" alt="Thinking GIF 6"/>
           </div>
         </script>
-      </section>
+      </section>-->
 
 
       <section class="slide" data-toc data-markdown>
