Added 'open' to install slide

--- a/slides-en.html
+++ b/slides-en.html
@@ -25,7 +25,7 @@
       <h1><img class="logo-stacked" src="framework/img/teenslc-logo-stacked-white.png" alt="Teens Learning Code logo">Welcome!</h1>
 
       <div class="instructions">
-        <h2>Create a<br>Project</h2>
+        <h2>OPEN,<br> DOWNLOAD<br> OR INSTALL</h2>
         <p>Open <a href="https://editor.p5js.org">editor.p5js.org</a></p>
         <p>Optional: Click <strong>Sign Up</strong> to create an account</p>
         <hr>
